--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,8 @@
   padding: 0;
 }
 
+body {
+  background-color: #4d4855;
+  background-image: linear-gradient(147deg, #4d4855 0%, #000000 74%);
+}
+
